tests/integration/features/document_grammar/_grammar_from_file/_validations/01_grammar_file_not_found/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail
CHECK: error: TraceabilityIndex: the document "Test document" imports a grammar from a file that does not exist: "grammar.sgra".
